--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -186,7 +186,7 @@ jobs:
           install -Dp ./geoip.dat ./publish/geoip.dat
           install -Dp ./geoip.dat.sha256sum ./publish/geoip.dat.sha256sum
           install -Dp ./custom/publish/geosite.dat ./publish/geosite.dat
-          install -Dp ./sing-geoip/publish/geoip.db ./publish/geoip.db
+          install -Dp ./sing-geoip/geoip.db ./publish/geoip.db
           install -p {proxy,direct,reject}-tld-list.txt ./publish/
           install -p {proxy,direct,reject}-list.txt ./publish/
           install -p {china-list,apple-cn,google-cn,gfw,greatfire,win-spy,win-update,win-extra}.txt ./publish/
