--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -67,6 +67,7 @@ jobs:
       - name: Get geoip.dat relative files
         run: |
           wget https://github.com/Loyalsoldier/geoip/raw/release/Country.mmdb
+          wget https://github.com/soffchen/sing-geosite/raw/release/geosite.db
           wget https://github.com/Loyalsoldier/geoip/raw/release/geoip.dat
           wget https://github.com/Loyalsoldier/geoip/raw/release/geoip.dat.sha256sum
 
@@ -184,6 +185,7 @@ jobs:
       - name: Move and zip files and generate sha256 hash
         run: |
           install -Dp ./geoip.dat ./publish/geoip.dat
+          install -Dp ./geosite.db ./publish/geosite.db
           install -Dp ./geoip.dat.sha256sum ./publish/geoip.dat.sha256sum
           install -Dp ./custom/publish/geosite.dat ./publish/geosite.dat
           install -Dp ./sing-geoip/geoip.db ./publish/geoip.db
